# QTodo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
dark/: _variables.scss  main.scss  style.qrc  style.qss
include/: AccountFormWidget.ui  HomeWidget.ui  SigninWidget.ui  SignupWidget.ui  StepFormWidget.ui  TaskFormWidget.ui  TaskList.ui  TaskWidget.ui  abstractform.hpp  accountformwidget.hpp  appwindow.hpp  csvloader.hpp  homewidget.hpp  httprequesthandler.hpp  serializable.hpp  signinwidget.hpp  signupwidget.hpp  slugify.hpp  step.hpp  stepformwidget.hpp  task.hpp  taskformwidget.hpp  tasklist.hpp  taskwidget.hpp  user.hpp
src/: accountformwidget.cpp  appwindow.cpp  homewidget.cpp  httprequesthandler.cpp  main.cpp  signinwidget.cpp  signupwidget.cpp  stepformwidget.cpp  taskformwidget.cpp  tasklist.cpp  taskwidget.cpp
